@@ -1,210 +1,179 @@
 package caselab.service.document;
 
-import caselab.controller.document.payload.DocumentAttributeValueDTO;
+import caselab.controller.document.facade.payload.PatchDocumentRequest;
+import caselab.controller.document.facade.payload.UpdateDocumentRequest;
 import caselab.controller.document.payload.DocumentRequest;
 import caselab.controller.document.payload.DocumentResponse;
 import caselab.domain.entity.ApplicationUser;
-import caselab.domain.entity.Attribute;
-import caselab.domain.entity.AttributeValue;
 import caselab.domain.entity.Document;
 import caselab.domain.entity.DocumentType;
-import caselab.domain.repository.ApplicationUserRepository;
-import caselab.domain.repository.AttributeRepository;
+import caselab.domain.entity.UserToDocument;
+import caselab.domain.entity.enums.DocumentPermissionName;
+import caselab.domain.entity.enums.DocumentStatus;
+import caselab.domain.repository.DocumentPermissionRepository;
 import caselab.domain.repository.DocumentRepository;
 import caselab.domain.repository.DocumentTypesRepository;
+import caselab.domain.repository.UserToDocumentRepository;
+import caselab.exception.document.version.DocumentPermissionAlreadyGrantedException;
+import caselab.exception.entity.not_found.DocumentNotFoundException;
+import caselab.exception.entity.not_found.DocumentTypeNotFoundException;
+import caselab.exception.status.StatusIncorrectForDeleteDocumentException;
+import caselab.exception.status.StatusIncorrectForUpdateDocumentException;
+import caselab.service.document.mapper.DocumentMapper;
+import caselab.service.util.DocumentUtilService;
 import jakarta.transaction.Transactional;
-import java.util.Collections;
 import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.NoSuchElementException;
-import java.util.Optional;
-import java.util.function.Function;
-import java.util.stream.Collectors;
+import java.util.Objects;
+import java.util.stream.Stream;
 import lombok.RequiredArgsConstructor;
-import org.springframework.context.MessageSource;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 @SuppressWarnings("MultipleStringLiterals")
 @Service
-@RequiredArgsConstructor
 @Transactional
+@RequiredArgsConstructor
 public class DocumentService {
+
+    private final DocumentUtilService documentUtilService;
 
     private final DocumentRepository documentRepository;
     private final DocumentTypesRepository documentTypeRepository;
-    private final ApplicationUserRepository applicationUserRepository;
-    private final AttributeRepository attributeRepository;
-    private final MessageSource messageSource;
+    private final UserToDocumentRepository userToDocumentRepository;
+    private final DocumentPermissionRepository documentPermissionRepository;
 
-    public DocumentResponse createDocument(DocumentRequest documentRequest) {
-        Document document = toEntity(documentRequest);
-        Document savedDocument = documentRepository.save(document);
-        return toDTO(savedDocument);
+    private final DocumentMapper documentMapper;
+
+    public DocumentResponse createDocument(DocumentRequest documentRequest, ApplicationUser creator) {
+        var document = documentMapper.requestToEntity(documentRequest);
+
+        document.setDocumentType(findDocumentTypeById(documentRequest.documentTypeId()));
+        document.setStatus(DocumentStatus.DRAFT);
+        document.setDocumentVersions(List.of());
+        documentRepository.save(document);
+
+        var creatorPermission = new UserToDocument();
+        creatorPermission.setApplicationUser(creator);
+        creatorPermission.setDocument(document);
+        creatorPermission.setDocumentPermissions(List.of(
+            documentPermissionRepository.findDocumentPermissionByName(DocumentPermissionName.CREATOR)
+        ));
+
+        creatorPermission = userToDocumentRepository.save(creatorPermission);
+        document.setUsersToDocuments(List.of(creatorPermission));
+
+        return documentMapper.entityToResponse(document);
     }
 
-    public DocumentResponse getDocumentById(Long id) {
-        return toDTO(findDocumentById(id));
+    public DocumentResponse getDocumentById(Long id, ApplicationUser user) {
+        var document = findDocumentById(id);
+
+        documentUtilService.assertHasPermission(user, document, DocumentPermissionName::any, "Any");
+        return documentMapper.entityToResponse(document);
     }
 
-    public Page<DocumentResponse> getAllDocuments(Pageable pageable) {
-        return documentRepository.findAll(pageable).map(this::toDTO);
-    }
-
-    public DocumentResponse updateDocument(Long id, DocumentRequest documentRequest) {
-        Document existingDocument = findDocumentById(id);
-        updateEntityFromDTO(existingDocument, documentRequest);
-        existingDocument = documentRepository.save(existingDocument);
-        return toDTO(existingDocument);
-    }
-
-    public void deleteDocument(Long id) {
-        if (documentRepository.existsById(id)) {
-            documentRepository.deleteById(id);
-        } else {
-            throw new NoSuchElementException(
-                messageSource.getMessage("document.not.found", new Object[] {id}, Locale.getDefault())
-            );
-        }
-    }
-
-    // Методы для работы с сущностью Document
-
-    private Document findDocumentById(Long id) {
-        return documentRepository.findById(id)
-            .orElseThrow(() -> new NoSuchElementException(
-                messageSource.getMessage("document.not.found", new Object[] {id}, Locale.getDefault())
-            ));
-    }
-
-    private Document toEntity(DocumentRequest documentRequest) {
-        Document document = new Document();
-        setDocumentType(document, documentRequest.documentTypeId());
-        setApplicationUsers(document, documentRequest.applicationUserIds());
-        setAttributeValues(document, documentRequest.attributeValues());
-        return document;
-    }
-
-    private void updateEntityFromDTO(Document document, DocumentRequest dto) {
-        updateDocumentType(document, dto.documentTypeId());
-        updateApplicationUsers(document, dto.applicationUserIds());
-        updateAttributeValues(document, dto.attributeValues());
-    }
-
-    // Методы для работы с DocumentType
-
-    private void setDocumentType(Document document, Long documentTypeId) {
-        DocumentType documentType = documentTypeRepository.findById(documentTypeId)
-            .orElseThrow(() -> new NoSuchElementException(
-                messageSource.getMessage("document.type.not.found", new Object[] {documentTypeId}, Locale.getDefault())
-            ));
-        document.setDocumentType(documentType);
-    }
-
-    private void updateDocumentType(Document document, Long documentTypeId) {
-        if (documentTypeId != null) {
-            setDocumentType(document, documentTypeId);
-        }
-    }
-
-    // Методы для работы с ApplicationUser
-
-    private void setApplicationUsers(Document document, List<Long> userIds) {
-        if (userIds != null) {
-            List<ApplicationUser> users = applicationUserRepository.findAllById(userIds);
-            if (users.size() != userIds.size()) {
-                throw new NoSuchElementException(
-                    messageSource.getMessage("users.not.found", null, Locale.getDefault())
-                );
-            }
-            document.setApplicationUsers(users);
-        }
-    }
-
-    private void updateApplicationUsers(Document document, List<Long> userIds) {
-        if (userIds != null) {
-            setApplicationUsers(document, userIds);
-        }
-    }
-
-    // Методы для работы с Attribute и AttributeValue
-
-    private void setAttributeValues(Document document, List<DocumentAttributeValueDTO> attributeValuesDTO) {
-        if (attributeValuesDTO != null) {
-            List<AttributeValue> attributeValues = attributeValuesDTO.stream()
-                .map(dto -> createOrUpdateAttributeValue(document, dto))
-                .collect(Collectors.toList());
-            document.setAttributeValues(attributeValues);
-        }
-    }
-
-    private void updateAttributeValues(Document document, List<DocumentAttributeValueDTO> attributeValuesDTO) {
-        if (attributeValuesDTO != null) {
-            Map<Long, AttributeValue> existingAttributeValues = document.getAttributeValues().stream()
-                .collect(Collectors.toMap(av -> av.getAttribute().getId(), Function.identity()));
-
-            List<AttributeValue> updatedValues = attributeValuesDTO.stream()
-                .map(dto -> updateOrCreateAttributeValue(document, existingAttributeValues.get(dto.id()), dto))
-                .toList();
-
-            document.getAttributeValues().clear();
-            document.getAttributeValues().addAll(updatedValues);
-        }
-    }
-
-    private AttributeValue createOrUpdateAttributeValue(Document document, DocumentAttributeValueDTO dto) {
-        Attribute attribute = attributeRepository.findById(dto.id())
-            .orElseThrow(() -> new NoSuchElementException(
-                messageSource.getMessage("attribute.not.found", new Object[] {dto.id()}, Locale.getDefault())
-            ));
-        AttributeValue attributeValue = new AttributeValue();
-        attributeValue.setDocument(document);
-        attributeValue.setAttribute(attribute);
-        attributeValue.setAppValue(dto.value());
-        return attributeValue;
-    }
-
-    private AttributeValue updateOrCreateAttributeValue(
-        Document document,
-        AttributeValue existingValue,
-        DocumentAttributeValueDTO dto
-    ) {
-        if (existingValue != null) {
-            existingValue.setAppValue(dto.value());
-            return existingValue;
-        } else {
-            return createOrUpdateAttributeValue(document, dto);
-        }
-    }
-
-    // Преобразование сущности Document в DTO
-
-    private DocumentResponse toDTO(Document document) {
-        return new DocumentResponse(
-            document.getId(),
-            getDocumentTypeId(document),
-            getApplicationUserIds(document).orElse(Collections.emptyList()),
-            getAttributeValuesDTO(document).orElse(Collections.emptyList())
+    public List<DocumentResponse> getAllDocuments(ApplicationUser user) {
+        return toDocumentResponse(
+            user
+                .getUsersToDocuments()
+                .stream()
+                .map(UserToDocument::getDocument)
         );
     }
 
-    private Long getDocumentTypeId(Document document) {
-        return document.getDocumentType() != null ? document.getDocumentType().getId() : null;
+    public List<DocumentResponse> getAllDocuments() {
+        return toDocumentResponse(
+            documentRepository.findAll().stream()
+        );
     }
 
-    private Optional<List<Long>> getApplicationUserIds(Document document) {
-        return Optional.ofNullable(document.getApplicationUsers())
-            .map(users -> users.stream()
-                .map(ApplicationUser::getId)
-                .collect(Collectors.toList()));
+    private List<DocumentResponse> toDocumentResponse(Stream<Document> documents) {
+        return documents.map(documentMapper::entityToResponse).toList();
     }
 
-    private Optional<List<DocumentAttributeValueDTO>> getAttributeValuesDTO(Document document) {
-        return Optional.ofNullable(document.getAttributeValues())
-            .map(attributeValues -> attributeValues.stream()
-                .map(av -> new DocumentAttributeValueDTO(av.getAttribute().getId(), av.getAppValue()))
-                .collect(Collectors.toList()));
+    public DocumentResponse updateDocument(Long id, UpdateDocumentRequest updateRequest, ApplicationUser user) {
+        var document = findDocumentById(id);
+
+        validateDocumentForUpdate(document, user);
+
+        document.setDocumentType(findDocumentTypeById(updateRequest.getDocumentTypeId()));
+        document.setName(updateRequest.getName());
+        document.setStatus(DocumentStatus.DRAFT);
+        return documentMapper.entityToResponse(documentRepository.save(document));
+    }
+
+    public DocumentResponse patchDocument(Long id, PatchDocumentRequest request, ApplicationUser user) {
+        var document = findDocumentById(id);
+
+        validateDocumentForUpdate(document, user);
+
+        documentMapper.patchDocumentFromPatchRequest(document, request);
+
+        var documentTypeId = request.getDocumentTypeId();
+        if (Objects.nonNull(documentTypeId)) {
+            var documentType = findDocumentTypeById(documentTypeId);
+            document.setDocumentType(documentType);
+        }
+
+        document.setStatus(DocumentStatus.DRAFT);
+
+        return documentMapper.entityToResponse(documentRepository.save(document));
+    }
+
+    private void validateDocumentForUpdate(Document document, ApplicationUser user) {
+        documentUtilService.assertHasPermission(user, document, DocumentPermissionName::canEdit, "Edit");
+
+        documentUtilService.assertHasDocumentStatus(
+            document,
+            List.of(DocumentStatus.DRAFT, DocumentStatus.SIGNATURE_REJECTED,
+                DocumentStatus.VOTING_REJECTED, DocumentStatus.ARCHIVED
+            ),
+            new StatusIncorrectForUpdateDocumentException()
+        );
+    }
+
+    public DocumentResponse grantReadDocumentPermission(
+        Long id,
+        ApplicationUser user,
+        ApplicationUser by
+    ) {
+        var document = findDocumentById(id);
+        documentUtilService.assertHasPermission(by, document, DocumentPermissionName::isCreator, "Creator");
+        if (!documentUtilService.checkLacksPermission(user, document, DocumentPermissionName::canRead)) {
+            throw new DocumentPermissionAlreadyGrantedException("Read");
+        }
+        var permission = documentPermissionRepository.findDocumentPermissionByName(DocumentPermissionName.READ);
+        var userToDocument = new UserToDocument();
+        userToDocument.setApplicationUser(user);
+        userToDocument.setDocument(document);
+        userToDocument.setDocumentPermissions(List.of(permission));
+        userToDocumentRepository.save(userToDocument);
+        document.getUsersToDocuments().add(userToDocument);
+        return documentMapper.entityToResponse(document);
+    }
+
+    public void documentToArchive(Long documentId, ApplicationUser user) {
+        var document = findDocumentById(documentId);
+
+        documentUtilService.assertHasPermission(user, document, DocumentPermissionName::isCreator, "Creator");
+        documentUtilService.assertHasDocumentStatus(
+            document,
+            List.of(DocumentStatus.DRAFT, DocumentStatus.SIGNATURE_REJECTED, DocumentStatus.SIGNATURE_ACCEPTED,
+                DocumentStatus.VOTING_REJECTED, DocumentStatus.VOTING_ACCEPTED
+            ),
+            new StatusIncorrectForDeleteDocumentException()
+        );
+
+        document.setStatus(DocumentStatus.ARCHIVED);
+        documentRepository.save(document);
+    }
+
+    private DocumentType findDocumentTypeById(Long id) {
+        return documentTypeRepository.findById(id)
+            .orElseThrow(() -> new DocumentTypeNotFoundException(id));
+    }
+
+    private Document findDocumentById(Long id) {
+        return documentRepository.findById(id)
+            .orElseThrow(() -> new DocumentNotFoundException(id));
     }
 }
